--- a/index.html
+++ b/index.html
@@ -60,25 +60,7 @@
                             <img class="img-fluid portfolio-image" src="assets/img/portfolio/destroyed_paradox_room.png" alt="Destroyed Paradox Room" loading="lazy"/>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Paradox Destroyed Room</div>
-                                <div class="portfolio-caption-subheading text-muted">2024 November - Present</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="portfolio-item">
-                            <img class="img-fluid portfolio-image" src="assets/img/portfolio/Sane Living Room.png" alt="Sane Main Floor" loading="lazy">
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Sane Main Floor</div>
-                                <div class="portfolio-caption-subheading text-muted">2024 October - Present</div>
-                            </div>
-                        </div>                        
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="portfolio-item">
-                            <img class="img-fluid portfolio-image" src="assets/img/portfolio/Sane Bathroom.png" alt="Sane Bathroom" loading="lazy"/>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Sane Bathroom</div>
-                                <div class="portfolio-caption-subheading text-muted">2024 October - Present</div>
+                                <div class="portfolio-caption-subheading text-muted">2024 December</div>
                             </div>
                         </div>
                     </div>
@@ -87,7 +69,25 @@
                             <img class="img-fluid portfolio-image" src="assets/img/portfolio/sane_bedroom.png" alt="Sane Bedroom" loading="lazy"/>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Sane Bedroom</div>
-                                <div class="portfolio-caption-subheading text-muted">2024 October - Present</div>
+                                <div class="portfolio-caption-subheading text-muted">2024 December</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <img class="img-fluid portfolio-image" src="assets/img/portfolio/Sane Living Room.png" alt="Sane Main Floor" loading="lazy">
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Sane Main Floor</div>
+                                <div class="portfolio-caption-subheading text-muted">2024 October</div>
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <img class="img-fluid portfolio-image" src="assets/img/portfolio/Sane Bathroom.png" alt="Sane Bathroom" loading="lazy"/>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Sane Bathroom</div>
+                                <div class="portfolio-caption-subheading text-muted">2024 October</div>
                             </div>
                         </div>
                     </div>
@@ -373,6 +373,16 @@
                             </div>
                         </div>                        
                     </div> 
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/heli_land.mp4" alt="Helicopter Land"  controls></video>
+                            <video class="img-fluid" src="assets/img/video/heli_leave.mp4" alt="Helicopter Leave"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Helicopter Animations</div>
+                                <p><span style="color: #f0f0f0;">Animation, Camera-work, and Sound Design by me.</span></p>
+                            </div>
+                        </div>                        
+                    </div> 
                 </div>
             </div>
         </section>
@@ -604,23 +614,6 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/zmgr_vcrg.mp3" type="audio/mp3">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                    <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Synthwave</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Synth Testing</div>
-                        <div class="custom-audio-player">
-                            <button class="play-pause-button">Play</button>
-                            <input type="range" class="seek-slider" value="0" max="100">
-                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
-                            <button class="download-button">
-                                <img src="assets/img/download.png" alt="Download" class="download-icon">
-                            </button>
-                        </div>
-                        <audio class="audio-element">
-                            <source src="assets/audio/synth_i_guess.MP3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -913,14 +906,14 @@
                 </div>
             </div>
         </footer>
-        <div id="lightbox" class="lightbox-overlay">
-            <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
-            <img id="lightbox-img" class="lightbox-img" src="" alt="">
-            <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
-            <img id="lightbox-img" class="lightbox-img" src="" alt="">
-        </div>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>          
+        <script async src="js/scripts.js" defer></script>  
     </body>
+    <div id="lightbox" class="lightbox-overlay">
+        <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
+        <img id="lightbox-img" class="lightbox-img" src="" alt="">
+        <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
+        <img id="lightbox-img" class="lightbox-img" src="" alt="">
+    </div>   
 </html>
