--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Hi, I'm Fancy Ducc</span></div>
-                    <div class="masthead-subheading"><span style="color: #f0f0f0;">Animations, scripts, music, 3D models, and so much more.</span></div>
+                    <div class="masthead-subheading"><span style="color: #f0f0f0;">Animations, scripts, music, and so much more.</span></div>
                 </div>
             </div>
         </header>
         <section class="page-section" id="building" style="background-color: #111111; color: #f0f0f0;">
             <div class="text-center">
-                <p><span style="color: hsl(0, 0%, 100%);">If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts. </span></p>
+                <p><span style="color: hsl(0, 100%, 69%);"> <strong>If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts.</strong></span></span></p>
             </div>
-
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Professional Buildings and Landscaping</span></h2>
@@ -175,15 +174,6 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid portfolio-image" src="assets/img/portfolio/Quantum Decay Main Menu.png" alt="Quantum Decay Main Menu" loading="lazy"/>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Quantum Decay Main Menu</div>
-                                <div class="portfolio-caption-subheading text-muted">2023 July</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="portfolio-item">
-                            <video class="img-fluid" src="assets/img/video/Quantum Decay.mp4" alt="Quantum Decay Main Menu Video" controls></video>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Quantum Decay Main Menu</div>
                                 <div class="portfolio-caption-subheading text-muted">2023 July</div>
@@ -466,6 +456,15 @@
                             </div>
                         </div>                        
                     </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/firstpersonhorrormovement.mp4" alt="Advanced First Person Movement System"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">First Person Horror Movement *Unfinished*</div>
+                                <p><span style="color: #9c9c9c;">This does not use any original Roblox controls, all custom</span></p>      
+                            </div>
+                        </div>                        
+                    </div>
                 </div>
             </div>
         </section>
@@ -515,8 +514,8 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Experienced Music Design</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family I now know how to make active and great soundtracks, some different themes than others, all music is made original without/with very few samples, I am capable of making any type of music that you request, whether it be horror, atmospheric, lofi, calming, active, intense, or a remix of a meme, I've got you.</span></p>
-                <p><span style="color: #f0f0f0;">Some audio and music I put on this portfolio can be free to download and use for whatever purposes you may want, credit is appreciated but not mandatory, this may not be the case for all audio and music.</span></p>
+                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, family, and tutors, I now know how to make active and great soundtracks, some different themes than others, all music is made as original as possible, I am capable of making any type of music that you request, whether it be horror, atmospheric, lofi, calming, active, or intense I've got you.</span></p>
+                <p><span style="color: #f0f0f0;">Some audio and music I put on this portfolio can be free to download and use for whatever purposes you may want, credit is appreciated but not mandatory, music already used in games or made for games are and will always be non-downloadable.</span></p>
                 <p><span style="color: #ff8282;">This entire website is under active development, if the music is not playing, reload the page, temporary fix until I figure out how to fix it permanentely.</span></p>
                 <div class="row-music">
                     <div class="col-lg-5">
@@ -544,6 +543,37 @@
                         </div>
                         <audio class="audio-element">
                             <source src="assets/audio/atmospheric_thing.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Tenebris Vox</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/tenebris_vox.ogg" type="audio/ogg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Cabin Fever (Played and recorded LIVE)</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                            <button class="download-button">
+                                <img src="assets/img/download.png" alt="Download" class="download-icon">
+                            </button>
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/cabinfever.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
