--- a/testimonials.html
+++ b/testimonials.html
@@ -88,7 +88,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <p class="testimonial-text" style="color: #f0f0f0;">"Very good service, he's just really cracked at what he does and fast, he's also really passionate on the stuff he works on."</p>
-                            <div class="testimonial-author" style="color: #888;">- Lighty_42 -</div>
+                            <div class="testimonial-author" style="color: #888;">- Lighty_42 - Owner of DOORS: Paradox -</div>
                         </div>
                         <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
                             <div class="testimonial-rating" style="color: #f5c518;">
@@ -98,6 +98,17 @@
                             </div>
                             <p class="testimonial-text" style="color: #f0f0f0;">"your 3D modeling isn't perfect, but it isn't bad by any means. even though you don't advertise it as the best you are still not awful at it, I'd say your a little above average in skill."</p>
                             <div class="testimonial-author" style="color: #888;">- RealAndresYas110 -</div>
+                        </div>
+                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
+                            <div class="testimonial-rating" style="color: #f5c518;">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <p class="testimonial-text" style="color: #f0f0f0;">"Fancy Ducc is honestly one of the best people ive worked with, his work flow and quality is beyond expectations"</p>
+                            <div class="testimonial-author" style="color: #888;">- Sam - Owner of Unpaid Workers and Sillygoofs -</div>
                         </div>
                         <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
                             <div class="testimonial-rating" style="color: #f5c518;">
