--- a/dualityidea.html
+++ b/dualityidea.html
@@ -160,7 +160,7 @@
                                 <tr>
                                     <td>Formal Complaint</td>
                                     <td>“I will carve the entire existence of pain into those who have disrespected me.” - Duality</td>
-                                    <td>Duality will pause for a second adjusting his tie on his neck, after doing so, he will begin to run at 35 speed with full control over where he goes for a maximum of 5 seconds of running time, Duality will run without any input and this action cannot be cancelled (almost identical to Guest 1337’s Charge ability), either hit something or run for 5 seconds, hitting anything will cause Slowness I to Duality for 5 seconds, if Duality runs into a survivor, Duality will punch the player, dealing 40 damage and knocking the player away just a bit, Duality will be given Slowness II or 5 seconds of hitting a player, Slowness I for 5 seconds hitting anything else.
+                                    <td>Duality will pause for a second adjusting his hat on his head, after doing so, he will begin to run at 35 speed with full control over where he goes for a maximum of 5 seconds of running time, Duality will run without any input and this action cannot be cancelled (almost identical to Guest 1337’s Charge ability), either hit something or run for 5 seconds, hitting anything will cause Slowness I to Duality for 5 seconds, if Duality runs into a survivor, Duality will punch the player, dealing 40 damage and knocking the player away just a bit, Duality will be given Slowness II or 5 seconds of hitting a player, Slowness I for 5 seconds hitting anything else.
     (I swear this isn’t a Guest clone)</td>
                                     <td>30s</td>
                                 </tr>
