--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <a class="nav-link" href="index.html"><strong>Home</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>Portfolio</strong></a>
+                                <a class="nav-link" href="hi :3;"><strong>Portfolio</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="aboutSubNav">
                                 <a class="nav-link" href="javascript:void(0);"><strong>About Me</strong></a>
