--- a/dualityidea.html
+++ b/dualityidea.html
@@ -31,13 +31,13 @@
                                 <a class="nav-link" href="index.html"><strong>Home</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>Portfolio</strong></a>
+                                <a class="nav-link"><strong>Portfolio</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="aboutSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>About Me</strong></a>
+                                <a class="nav-link"><strong>About Me</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="servicesSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>Services</strong></a>
+                                <a class="nav-link"><strong>Services</strong></a>
                             </li>
                         </ul>
                     </div>
