--- a/portfolio-scripting.html
+++ b/portfolio-scripting.html
@@ -28,15 +28,17 @@
                 <div class="row w-100">
                     <div class="col-12">
                         <ul class="navbar-nav flex-row text-uppercase justify-content-center py-3" id="mainNavTop">
-                          <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" href="index.html"><strong>Home</strong></a>
+                            </li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>Portfolio</strong></a>
+                                <a class="nav-link"><strong>Portfolio</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="aboutSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>About Me</strong></a>
+                                <a class="nav-link"><strong>About Me</strong></a>
                             </li>
                             <li class="nav-item mx-3" data-submenu="servicesSubNav">
-                                <a class="nav-link" href="javascript:void(0);"><strong>Services</strong></a>
+                                <a class="nav-link"><strong>Services</strong></a>
                             </li>
                         </ul>
                     </div>
