warning banner and temporary navigation
don't you love it when debugging in VS code works perfect, but then the pushed website doesn't?

yeah, me too.

--- a/temporarynavigation.html
+++ b/temporarynavigation.html
@@ -12,6 +12,7 @@
         <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     </head>
+
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
         <nav class="navbar navbar-dark fixed-top" id="mainNav">
             <div class="container">
@@ -68,31 +69,62 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </nav>
-        
+
         <header class="masthead">
             <div class="masthead-content">
-                <div class="container">
-                    <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Page name here</span></div>
-                    <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Sub text here</span></div>
+                <div class="container text-center">
+                    <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Temporary Navigation</span></div>
+                    <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Hey, at least I'm redesigning this thing.</span></div>
                 </div>
             </div>
         </header>
 
-
         <div class="divider"></div>
 
-        <div class="divider"></div>
-        
+        <section class="page-section" id="emergencynavigation">
+            <div id="emergency-tabs" class="container text-center">
+              <div class="tab-content" id="emergencyTabContent">
+                <div class="tab-pane fade show active p-3" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
+                  <div class="list-group">
+                    <a href="portfolio-building.html" class="list-group-item list-group-item-action"><strong>Building</strong></a>
+                    <a href="portfolio-animating.html" class="list-group-item list-group-item-action"><strong>Animation</strong></a>
+                    <a href="portfolio-scripting.html" class="list-group-item list-group-item-action"><strong>Scripting</strong></a>
+                    <a href="portfolio-vfx.html" class="list-group-item list-group-item-action"><strong>VFX</strong></a>
+                    <a href="portfolio-music.html" class="list-group-item list-group-item-action"><strong>Music</strong></a>
+                    <a href="portfolio-modeling.html" class="list-group-item list-group-item-action"><strong>Models</strong></a>
+                  </div>
+                </div>
+                <p></p>
+                <div class="tab-pane fade p-3" id="about" role="tabpanel" aria-labelledby="about-tab">
+                  <div class="list-group">
+                    <a href="why-hire-me.html" class="list-group-item list-group-item-action"><strong>Why Hire Me</strong></a>
+                    <a href="testimonials.html" class="list-group-item list-group-item-action"><strong>Testimonials</strong></a>
+                  </div>
+                </div>
+                <p></p>
+                <div class="tab-pane fade p-3" id="services" role="tabpanel" aria-labelledby="services-tab">
+                  <div class="list-group">
+                    <a href="games.html" class="list-group-item list-group-item-action"> <strong>Games</strong></a>
+                    <a href="payments.html" class="list-group-item list-group-item-action"><strong>Payments</strong></a>
+                    <a href="free-stuff.html" class="list-group-item list-group-item-action"><strong>Free Stuff</strong></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+      <div class="divider"></div>
+
         <section class="contact-page-section" id="contact">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Contact Me</span></h2>
                 </div>
                 <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need expert animation, detailed scripting, unique building, or even a bit of 3D modeling, I'm here to help bring your gaming ideas to life.</span></p>
-                <p><span style="color: #f0f0f0;">Don't be a stranger - feel free to reach out with any questions, project ideas, or even just to chat about game development. 
-                    I'm available on Discord as distinguished_duccer 7 days a week because I am chronically online. :D</span></p>
+                <p><span style="color: #f0f0f0;">Don't be a stranger - feel free to reach out with any questions, project ideas, or even just to chat about game development. I'm available on Discord as distinguished_duccer 7 days a week because I am chronically online. :D</span></p>
                 <div class="text-center">
                     <a href="http://discordapp.com/users/1027686323282260069" target="_blank" class="btn btn-primary btn-xl text-uppercase"><span style="color: #ffffff;">Contact Me Here</span></a>
                 </div>
@@ -128,5 +160,5 @@
         <img id="lightbox-img" class="lightbox-img" src="" alt="">
         <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
         <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    </div>   
+    </div>
 </html>
