--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </nav>
 
         <header class="masthead">
             <div class="masthead-content">
                 <div class="container text-center">
-                    <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Welcome to My Portfolio</span></div>
-                    <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Discover my game development, animation, scripting, building, and music projects.</span></div>
+                    <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Hi, I'm Fancy Ducc</span></div>
+                    <div class="masthead-subheading"><span style="color: rgb(255, 255, 255);">Building, Animation, Scripting, Music, and so much more.</span></div>
                 </div>
             </div>
         </header>
@@ -85,21 +85,27 @@
         <div class="divider"></div>
 
         <section class="page-section" id="id_here_to_match_page">
-          <div class="text-center">
-            <img src="assets/img/DuccPFP.png" alt="Fancy Ducc Profile" style="max-width: 200px; border-radius: 50%;" loading="lazy">
-        </div>
-        <div class="text-center body-txt">
-            <p>Hi, I'm Fancy Ducc, a multi-disciplinary creator with a passion for making all types of games and experiences on Roblox. Explore my work, learn about my services, and get in touch to create something great!</p>
-            <p>To see my portfolio, click on "Portfolio" at the top of your screen!</p>
-        </div>
-        <div class="text-center">
-          <p>
-              <span style="color: rgb(255, 100, 100);">
-                  <strong>If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts.</strong>
-              </span>
-          </p>
-        </div>
-        </section>
+            <div class="text-center">
+              <img src="assets/img/DuccPFP.png" alt="Fancy Ducc Profile" style="max-width: 200px; border-radius: 50%;" loading="lazy">
+            </div>
+            <div class="text-center body-txt">
+              <p>Hi, I'm Fancy Ducc, a multi-disciplinary creator with a passion for making all types of games and experiences on Roblox. Explore my work, learn about my services, and get in touch to create something great!</p>
+              <p>To see my portfolio, click on "Portfolio" at the top of your screen!</p>
+            </div>
+            <div class="text-center">
+              <p>
+                <span style="color: rgb(255, 100, 100);">
+                    <strong>If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts.</strong>
+                </span>
+              </p>
+              <p>
+                <span style="color: rgb(255, 59, 59);">
+                  <strong>This entire portfolio is under a complete redesign, so things may not work as expected, such as the dropdown above. Use <a href="temporarynavigation.html" class="hover-link">Temporary Navigation</a> to navigate the website. Sorry!</strong>
+                </span>
+              </p>
+            </div>
+
+          </section>
 
         <div class="divider"></div>
 
@@ -164,11 +170,12 @@
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
         <script async src="js/scripts.js" defer></script>  
+        <script src="js/warningBanner.js"></script>
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
         <img id="lightbox-img" class="lightbox-img" src="" alt="">
         <div id="lightbox-next" class="lightbox-arrow lightbox-arrow-right">&rsaquo;</div>
         <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    </div>   
+    </div>
 </html>
