--- a/payments.html
+++ b/payments.html
@@ -272,5 +272,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="js/scripts.js"></script>
     <script src="js/discounts.js"></script>
+    <script src="js/warningBanner.js"></script>
 </body>
 </html>
