--- a/portfolio-modeling.html
+++ b/portfolio-modeling.html
@@ -169,6 +169,7 @@
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
         <script async src="js/scripts.js" defer></script>  
+        <script src="js/warningBanner.js"></script>
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
