--- a/index old.html
+++ b/index old.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Fancy Ducc Portfolio - Game Development, Animation, Music, and more." />
         <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio</title>
-        <link rel="icon" href="assets/Ducc2D.png" />
+        <link rel="icon" href="assets/img/DuccPFP.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="text-center">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/Ducc2D.png" alt="Logo" style="height: 30px;" loading="lazy">
+                        <img src="assets/img/DuccPFP.png" alt="Logo" style="height: 30px;" loading="lazy">
                         <span style="color: #5000e6;"><strong>Fancy Ducc Portfolio</strong></span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" 
