--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Fancy Ducc Portfolio - Home" />
         <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio - Home</title>
-        <link rel="icon" href="assets/Ducc2D.png" />
+        <link rel="icon" href="assets/img/DuccPFP.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
@@ -29,16 +29,16 @@
                     <div class="col-12">
                         <ul class="navbar-nav flex-row text-uppercase justify-content-center py-3" id="mainNavTop">
                             <li class="nav-item mx-3">
-                                <a class="nav-link" href="index.html"><strong>Home</strong></a>
+                                <button class="nav-link" href="index.html"><strong>Home</strong></button>
                             </li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
-                                <a class="nav-link"><strong>Portfolio</strong></a>
+                                <button class="nav-link"><strong>Portfolio</strong></button>
                             </li>
                             <li class="nav-item mx-3" data-submenu="aboutSubNav">
-                                <a class="nav-link"><strong>About Me</strong></a>
+                                <button class="nav-link"><strong>About Me</strong></button>
                             </li>
                             <li class="nav-item mx-3" data-submenu="servicesSubNav">
-                                <a class="nav-link"><strong>Services</strong></a>
+                                <button class="nav-link"><strong>Services</strong></button>
                             </li>
                         </ul>
                     </div>
