--- a/payments.html
+++ b/payments.html
@@ -228,7 +228,8 @@
                     <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
                     <p>Currently, I'm offering special services for the following games:</p>
                     <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                        <li>Forsaken (By souldrivenlove) - All Services Free Forever</li>
+                        <li>No Big Deal (By DiskCard / next.grips) - All Services Free Forever</li>
+                        <li>Forsaken (By souldrivenlove) - All Services 50% Off</li>
                         <li>Grace (By The Fartering Few / szymon227G) - All Services 35% Off</li>
                         <li>The Skinwalker (By Otrix and Zaku) - All Services 15% Off</li>
                     </ul>
